fixed alignments of header and navbars

--- a/css/homepage.css
+++ b/css/homepage.css
@@ -6,7 +6,10 @@ body
 }
 .container
 {
-    width:790px;
+    width:1030px;
+    height:550px;
+    margin-left:16%;
+    margin-right:16%;
     margin:auto;
     font-family:'Trebuchet MS';
     font-weight: lighter;
@@ -20,7 +23,8 @@ body
     background:rgb(0,0,0,0.5);
     list-style-type: none;
     margin-top: -8px;
-    padding-left: 3px;
+    padding-left: 8px;
+    padding-right:3px;
     padding-bottom: 4px;
     float:right;
 }
@@ -34,7 +38,7 @@ body
 }
 .header
 {
-    width:790px;
+    width:100%;
     padding:3px;
     box-shadow:3px black;
 
@@ -45,32 +49,32 @@ body
     background:rgb(0,0,0,0.8);
     outline: 0.1px solid rgb(255,255,255,0.2);
     outline-offset: -4px;
-   
+    margin-top:35px;
 }
 .navbar ul
 {
     list-style-type:none;
     padding-top: 15px;
     height:30px;
-    width: 565px;
-    margin-left:auto;
-    margin-right:15px;
+    margin-left: 26%;
 }
-.navbar li + li::before
-{
-    content:"| ";
-    color:white;
-}
+
 .navbar li
 {
     display:inline-block;
-
+    
+}
+.delimiter
+{
+    color:white;
 }
 .navbar a
 {
     text-decoration:none;
     color:skyblue;
-
+    letter-spacing: 1.5px;
+    margin-left:4px;
+    margin-right:4px;
 }
 #logo
 {
@@ -80,27 +84,39 @@ body
     margin-left: 15px;
     position:relative;
     z-index:1;
-    margin-top:-13px;
+    margin-top:6px;
 }
 .banner
 {
     color:white;
     background: rgb(0, 0, 0, 0.2);
     height:160px;
-    margin:auto;
 }
-.banner h1
+.banner h2
 {
-    margin:0;
     margin-left: 25px;
+    font-weight: lighter;
+    font-size: 35px;
+    margin-top: 15.5px;
+}
+.banner .line1
+{
+    margin-bottom:-6px;
+}
+.banner .line2
+{
+    margin-top:6px;
 }
 .frame-set
 {
     background:rgb(0,0,0,0.6);
-    width:790px;
+    width:1030px;
     padding-top:15px;
-    height:400px;
+    height:450px;
     font-weight:200;
+    font-size:13.5px;
+    font-weight:lighter;
+    letter-spacing: 0.5px;
 
 }
 .frame-set a
@@ -109,32 +125,26 @@ body
 }
 .frame1
 {
-    width:220px;
+    width:300px;
     display: inline-block;
     color:white;
-    font-size:12px;
-    font-weight:bold; 
     padding-left: 25px;
     vertical-align: top;
     padding-top: 20px;
 }
 .frame2
 {
-    width: 225px;
+    width: 300px;
     display: inline-block;
     color:white;
-    font-size:12px;
-    font-weight:bold; 
     padding-left: 30px;
     margin-top:10px;
 }
 .frame3
 {
-    width:220px;
+    width:270px;
     display: inline-block;
     color:white;
-    font-size:12px;
-    font-weight:bold; 
     padding-left: 30px;
     vertical-align: top;
     padding-top: 20px;
@@ -144,32 +154,33 @@ body
     margin-left: 4px;
     margin-right: 4px;
     margin-bottom:-5px;
-    height: 396px;
+    height: 443px;
     border-width: 0.2px;
     border-style: solid;
+    border-bottom:1px solid white;
     border-image: linear-gradient(to top, rgb(255,255,255,0.2),rgb(255,255,255,0.05)) 1 100%;
 }
 
 .border-bottom {
-    margin-top: 18px;
-    border: 0.2px solid rgb(255, 255, 255, 0.3);
+    margin-top: 2px;
+    border: 1px solid rgb(255, 255, 255, 0.1);
 }
 .image-tile2
 {
-    height: 95px;
-    width: 218px;
+    width: 100%;
+    height: 130px;
 }
 .image-tile1
 {
     filter:brightness(2);
-    height: 95px;
-    width: 218px;
+    height: 30%;
+    width: 100%;
     margin-top: -10px;
 }
 .image-tile3
 {
-    height: 95px;
-    width: 218px;
+    height: 36%;
+    width: 110%;
     margin-top: -10px;
 }
 .footer
